fix emoji alignment

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -75,6 +75,7 @@ a:hover {
     margin-right: 10px;
     width: 20px;
     display: inline-block;
+    text-align: center;
 }
 
 
